src/test/compile-fail/import4.rs
// error-pattern: recursive import

import zed.bar;
import bar.zed;

fn main(vec[str] args) {
  log "loop";
}
